--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,82 @@
 body {
     margin: 0;
+    font-family: 'Poggins', sans-serif;
+    box-sizing: border-box;
 }
 
-a {
-    color: red;
+.navbar {
+    width: 100vw;
+    height: 20vh;
+    /* background-color: whitesmoke; */
+    position: relative;
+
+}
+
+/* 25% left and 25% right */
+
+.navbar .nav-logo {
+    left: 25%;
+    /* width: 120px; */
+
+    height: 100%;
+    position: absolute;
+}
+
+.navbar .nav-logo img {
+    position: absolute;
+    height: 50%;
+    padding-top: 50px;
+}
+
+
+.navbar .nav-title {
+    font-family: 'Poggins', sans-serif;
+    width: 250px;
+    height: 50%;
+    /* background-color: aqua; */
+    position: absolute;
+    left: 31%;
+    padding-top: 30px;
+}
+
+.navbar .nav-title h1 {
+    color: #233032;
+    font-weight: bolder;
+    font-family: 'Poggins', sans-serif;
+    font-size: 40px;
+}
+
+.navbar .nav-title p {
+    color: #2f86d6;
+    font-weight: bold;
+    margin-top: -25px;
+    font-family: 'Poggins', sans-serif;
+    font-size: 18px;
+}
+
+.navbar .nav-buttons {
+    position: absolute;
+    /* height: 100%; */
+    /* background-color: tomato; */
+    right: 25%;
+    top: 40%;
+}
+
+.navbar .nav-buttons ul li {
+    display: inline;
+    padding-top: 20px;
+    margin-left: 30px;
+}
+
+.navbar .nav-buttons ul li a {
+    font-family: 'Poggins', sans-serif;
+    text-decoration: none;
+    font-weight: bolder;
+    color: black;
+}
+
+.banner {
+    height: 100vh;
+    width: 100vw;
+    background-color: #2f86d6;
 }
