--- a/css/style.css
+++ b/css/style.css
@@ -88,14 +88,14 @@ body {
 .banner .banner-content {
     box-sizing: border-box;
     position: absolute;
-   /*  background-color: tomato; */
+    /* background-color: tomato; */
     width: 1024px;
-    height: 50%;
+    height: 60%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
-    top: 25%;
+    top: 16%;
     
 }
 
@@ -124,4 +124,55 @@ body {
    /*  background-color: red; */
     position: absolute;
     right: 0;
+}
+
+.first-ad {
+    width: 100vw;
+    height: 15vh;
+    background-color: #233032;
+    position: relative;
+}
+
+.first-ad .first-ad-container {
+    width: 1024px;
+    height: 100%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+    left: 0;
+    right: 0;
+    /* background-color: blue; */
+    font-family: 'Poppins', sans-serif;
+    color: #f6f6f6;
+}
+
+.first-ad .first-ad-container .first-ad-left {
+    position: relative;
+    top: 14px;
+}
+
+.first-ad .first-ad-container .first-ad-right {
+    position: absolute;
+    top: 45px;
+    right: 0;
+    background-color: #2f86d6;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.first-ad .first-ad-container .first-ad-right a {
+    text-decoration: none;
+    font-weight: bolder;
+    color: #f6f6f6;
+    font-size:19px;
+    margin-left: 5px;
+
+}
+
+
+
+
+.info {
+    height: 100vh;
 }
