--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-top: 20px;
-    /* font-weight: bold; */
+    font-weight: bold;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
 }
